--- a/src/pages/chat.hbs
+++ b/src/pages/chat.hbs
@@ -1,5 +1,5 @@
 {{!< chat}}
 {{> chatList}}
-<div class="chatMessageBox">
-
+<div class="chatMessageBox-null">
+    Выберите чат чтобы отправить сообщение
 </div>
