--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -6,6 +6,6 @@
   <a href="./500.hbs">500</a>
   <a href="./login.hbs">login</a>
   <a href="./register.hbs">register</a>
-  <a href="./nullChat.hbs">nullChat</a>
   <a href="./chat.hbs">chat</a>
+  <a href="./profile.hbs">profile</a>
 </div>
