--- a/src/pages/login.hbs
+++ b/src/pages/login.hbs
@@ -1,7 +1,7 @@
 {{!< base}} <div id="auth">
     <h2>Вход</h2>
     {{#each loginInputs}}
-    {{> input}}
+    {{> signInput}}
     {{/each}}
     <div class="auth__actions">
         {{> button title="Авторизоваться"}}
