--- a/src/pages/register.hbs
+++ b/src/pages/register.hbs
@@ -1,7 +1,7 @@
 {{!< base}} <div id="auth">
     <h2>Регистрация</h2>
     {{#each registerInputs}}
-    {{> input}}
+    {{> signInput}}
     {{/each}}
     <div class="auth__actions">
         {{> button title="Зарегистрироваться"}}
