исправлена и почищена верстка, структура проекта

--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -1,7 +1,2 @@
 {{!< base}}
-
-<error>
-  <h1>404</h1>
-  <h2>Не туда попали</h2>
-  {{> return}}
-</error>
+{{> error code=404 message="Не туда попали"}}
