--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -1,7 +1,1 @@
-{{!< base}}
-
-<error>
-  <h1>500</h1>
-  <h2>Уже фиксим</h2>
-  {{> return}}
-</error>
+{{!< base}} {{> error code=500 message="Уже фиксим"}}
