--- a/src/pages/chat.hbs
+++ b/src/pages/chat.hbs
@@ -1,5 +1,3 @@
-{{!< chat}}
-{{> chatList}}
-<div class="chatMessageBox-null">
+{{!< chat}} <div class="chat-message__null">
     Выберите чат чтобы отправить сообщение
-</div>
+    </div>
