--- a/src/pages/editProfile.hbs
+++ b/src/pages/editProfile.hbs
@@ -1,5 +1,5 @@
-{{!< sub}} <div id="profile">
-    <div id="profile__avatar"></div>
+{{!< inner}} <div class="profile">
+    <div class="profile__avatar"></div>
     <h3>Иван</h3>
     <div class="profile__data">
         {{#each profileInputs}}
