--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,11 +1,11 @@
-{{!< base}}
-
-<div>
-  <h1>awesomeChat</h1>
-  <a href="./404.hbs">404</a>
-  <a href="./500.hbs">500</a>
-  <a href="./login.hbs">login</a>
-  <a href="./register.hbs">register</a>
-  <a href="./chat.hbs">chat</a>
-  <a href="./profile.hbs">profile</a>
-</div>
+{{!< base}} <nav>
+  <ul class="nav__links">
+    <li><a href="./404.hbs">404</a></li>
+    <li><a href="./500.hbs">500</a></li>
+    <li><a href="./signIn.hbs">signIn</a></li>
+    <li><a href="./signUp.hbs">signUp</a></li>
+    <li><a href="./chat.hbs">chat</a></li>
+    <li><a href="./profile.hbs">profile</a></li>
+    <li><a href="./editProfile.hbs">editProfile</a></li>
+  </ul>
+  </nav>
