--- a/src/partials/contact.hbs
+++ b/src/partials/contact.hbs
@@ -1,4 +1,4 @@
-<div class="contact {{#if active}}active{{/if}}">
+<li class="contact {{#if active}}active{{/if}}">
     <a class="contact__startChat" href="./../pages/chat.hbs"></a>
     <div class="contact__avatar"></div>
     <div class="contact__title">
@@ -10,8 +10,8 @@
         {{/if}}
         {{lastMessage}}
     </div>
-    <div class="contact__time">{{time}}</div>
+    <time>{{time}}</time>
     {{#if unreadCnt}}
     <div class="contact__unreadCnt">{{unreadCnt}}</div>
     {{/if}}
-</div>
+</li>
