--- a/src/pages/profile.hbs
+++ b/src/pages/profile.hbs
@@ -1,6 +1,6 @@
-{{!< sub}} <div id="profile">
-    <div id="profile__avatar">
-        <a id="profile__avatar-change" href="">Поменять<br/>аватар</a>
+{{!< inner}} <div class="profile">
+    <div class="profile__avatar">
+        <a class="profile__avatar-change" href="">Поменять<br/>аватар</a>
     </div>
     <h3>Иван</h3>
     <div class="profile__data">
@@ -10,12 +10,12 @@
     </div>
     <div class="profile__controls">
         <div class="profile__link">
-            <a href="./profileEdit.hbs">Изменить данные</a>
+            <a href="./editProfile.hbs">Изменить данные</a>
         </div>
         <div class="profile__link">
             <a href="">Изменить пароль</a>
         </div>
-        <div class="profile__link redLink">
+        <div class="profile__link profile__link-red">
             <a href="./index.hbs">Выйти</a>
         </div>
     </div>
