sitemap fix добавил автодеплой ветки sprint_1

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,5 +1,5 @@
-{{!< base}} <nav>
-  <ul class="nav__links">
+{{!< base}} <nav class="site-map">
+  <ul class="site-map__links">
     <li><a href="./404.hbs">404</a></li>
     <li><a href="./500.hbs">500</a></li>
     <li><a href="./signIn.hbs">signIn</a></li>
