--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,7 +27,8 @@ body {
     h2 {
         font-size: 20px;
     }
-    nav{
+
+    nav {
         margin-top: 69px;
     }
 }
@@ -131,4 +132,8 @@ input {
             }
         }
     }
+}
+
+.site-map {
+    margin: auto;
 }
